added create post button to post.html

--- a/blog.html
+++ b/blog.html
@@ -31,7 +31,7 @@
         <div class="edit">
             <p>
                 Make a new post!
-                <a title="Make a new post" href="https://github.com/TKDKid1000/TKDKid1000/edit/main/README.md"><i class="fa fa-pencil-square-o fa-2"></i></a>
+                <a title="Make a new post" href="https://github.com/TKDKid1000/tkdkid1000.github.io/edit/master/data/blog.json"><i class="fa fa-pencil-square-o fa-2"></i></a>
             </p>
         </div>
 	    <div id="post1" class="blogpost">
