--- a/post.html
+++ b/post.html
@@ -27,6 +27,12 @@
 
 
         <h1 style="text-align: center;">Post Viewer</h1>
+        <div class="edit">
+            <p>
+                Make a new post!
+                <a title="Make a new post" href="https://github.com/TKDKid1000/tkdkid1000.github.io/edit/master/data/blog.json"><i class="fa fa-pencil-square-o fa-2"></i></a>
+            </p>
+        </div>
 	    <div id="post" class="blogpost">
 	    	<h2 id="posttitle"></h2>
             <a id="permalink" href="">Post Link</a>
