surrounded blog posts with <p>

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <h2>Recent Blog Post</h2>
         <div id="post1" class="blogpost">
 	    	<h2 id="posttitle"></h2>
-            <a id="permalink" href="">Post Link</a>
+            <p><a id="permalink" href="">Post Link</a></p>
 	    	<div id="postcontent"></div>
 	    	<br />
 	    	<p id="datetime"></p>
