--- a/post.html
+++ b/post.html
@@ -35,7 +35,7 @@
         </div>
 	    <div id="post" class="blogpost">
 	    	<h2 id="posttitle"></h2>
-            <a id="permalink" href="">Post Link</a>
+            <p><a id="permalink" href="">Post Link</a></p>
 	    	<div id="postcontent"></div>
 	    	<br />
 	    	<p id="datetime"></p>
