--- a/blog.html
+++ b/blog.html
@@ -36,14 +36,14 @@
         </div>
 	    <div id="post1" class="blogpost">
 	    	<h2 id="posttitle"></h2>
-            <a id="permalink" href="">Post Link</a>
+            <p><a id="permalink" href="">Post Link</a></p>
 	    	<div id="postcontent"></div>
 	    	<br />
 	    	<p id="datetime"></p>
 	    </div>
         <div id="post2" class="blogpost">
 	    	<h2 id="posttitle"></h2>
-            <a id="permalink" href="">Post Link</a>
+            <p><a id="permalink" href="">Post Link</a></p>
 	    	<div id="postcontent"></div>
 	    	<br />
 	    	<p id="datetime"></p>
