--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,7 @@
         <script src="/script.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="https://kit.fontawesome.com/852720c194.js" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
     </head>
     <body>
         <meta name="viewport" content="width=device-width, initial-scale=1">
