--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
         <title>TKDKid1000 - Contact</title>
         <link rel="stylesheet" href="/style.css">
         <link rel="icon" type="image/png" href="/head.png">
-        <script src="/script.js"></script>
+        <script defer src="/script.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="https://kit.fontawesome.com/852720c194.js" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
@@ -26,7 +26,8 @@
               <i class="fa fa-bars"></i>
             </a>
         </div>
-
+    <input id="darkmode" type="checkbox" onclick="toggleDarkMode()" />
+    <label></label>
 	<h1 style="text-align: center;">Contact</h1>
 	<i class="fab fa-discord fa-7x"></i>
 	<p style="text-align: left;">Message me on discord at imayhaveborkedit#0406</p>
