gave dark/light mode button animation

--- a/blog.html
+++ b/blog.html
@@ -27,8 +27,8 @@
             </a>
         </div>
 
-        <input id="darkmode" type="checkbox" onclick="toggleDarkMode()" />
-        <label></label>
+        <input id="darkmode" title="toggle dark/light mode" type="checkbox" onclick="toggleDarkMode()" />
+        <label id="darkmodelabel"></label>
         <h1 style="text-align: center;">Blog</h1>
         <div class="edit">
             <p>
