--- a/contact.html
+++ b/contact.html
@@ -26,8 +26,8 @@
               <i class="fa fa-bars"></i>
             </a>
         </div>
-    <input id="darkmode" type="checkbox" onclick="toggleDarkMode()" />
-    <label></label>
+    <input id="darkmode" title="toggle dark/light mode" type="checkbox" onclick="toggleDarkMode()" />
+    <label id="darkmodelabel"></label>
 	<h1 style="text-align: center;">Contact</h1>
 	<i class="fab fa-discord fa-7x"></i>
 	<p style="text-align: left;">Message me on discord at imayhaveborkedit#0406</p>
