--- a/post.html
+++ b/post.html
@@ -26,8 +26,8 @@
             </a>
         </div>
 
-        <input id="darkmode" type="checkbox" onclick="toggleDarkMode()" />
-        <label></label>
+        <input id="darkmode" title="toggle dark/light mode" type="checkbox" onclick="toggleDarkMode()" />
+        <label id="darkmodelabel"></label>
         <h1 style="text-align: center;">Post Viewer</h1>
         <div class="edit">
             <p>
