--- a/blog.html
+++ b/blog.html
@@ -17,7 +17,7 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <div data-include="data/nav.html"></div>
         <div data-include="data/darkmode.html"></div>
-
+        <div data-include="data/socials.html"></div>
         <input id="darkmode" title="toggle dark/light mode" type="checkbox" onclick="toggleDarkMode()" />
         <label id="darkmodelabel"></label>
         <h1 style="text-align: center;">Blog</h1>
