--- a/contact.html
+++ b/contact.html
@@ -17,6 +17,7 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <div data-include="data/nav.html"></div>
         <div data-include="data/darkmode.html"></div>
+        <div data-include="data/socials.html"></div>
 	<h1 style="text-align: center;">Contact</h1>
 	<i class="fab fa-discord fa-7x"></i>
 	<p style="text-align: left;">Message me on discord at imayhaveborkedit#0406</p>
