--- a/post.html
+++ b/post.html
@@ -17,7 +17,7 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <div data-include="data/nav.html"></div>
         <div data-include="data/darkmode.html"></div>
-        
+        <div data-include="data/socials.html"></div>
         <h1 style="text-align: center;">Post Viewer</h1>
         <div class="edit">
             <p>
