--- a/data/socials.html
+++ b/data/socials.html
@@ -10,3 +10,7 @@
     <i class="fab fa-reddit fa-2x"></i>
     <p class="name">U/TKDKid1000</p>
 </div>
+<div class="stackoverflow social" title="Open my stackoverflow" onclick="openlink(`https://stackoverflow.com/users/15095035/tkdkid1000`)">
+    <i class="fab fa-stack-overflow fa-2x"></i>
+    <p class="Name">TKDKid1000</p>
+</div>
