added correct class names to stackoverflow

--- a/data/socials.html
+++ b/data/socials.html
@@ -12,5 +12,5 @@
 </div>
 <div class="stackoverflow social" title="Open my stackoverflow" onclick="openlink(`https://stackoverflow.com/users/15095035/tkdkid1000`)">
     <i class="fab fa-stack-overflow fa-2x"></i>
-    <p class="Name">TKDKid1000</p>
+    <p class="name">TKDKid1000</p>
 </div>
