added more socials and used bordure

--- a/data/socials.html
+++ b/data/socials.html
@@ -2,6 +2,10 @@
     <i class="fab fa-discord fa-2x"></i>
     <p class="name">imayhaveborkedit#0406</p>
 </div>
+<div class="email social" title="Send me an email" onclick="openlink(`mailto:tkdkid999@gmail.com`)">
+    <i class="fas fa-envelope fa-2x"></i>
+    <p class="name">tkdkid999@gmail.com</p>
+</div>
 <div class="github social" title="Open my github" onclick="openlink(`https://github.com/TKDKid1000`)">
     <i class="fab fa-github fa-2x"></i>
     <p class="name">TKDKid1000</p>
@@ -13,4 +17,8 @@
 <div class="stackoverflow social" title="Open my stackoverflow" onclick="openlink(`https://stackoverflow.com/users/15095035/tkdkid1000`)">
     <i class="fab fa-stack-overflow fa-2x"></i>
     <p class="name">TKDKid1000</p>
+</div>
+<div class="codepen social" title="Open my codepen" onclick="openlink(`https://codepen.io/tkdkid1000`)">
+    <i class="fab fa-codepen fa-2x"></i>
+    <p class="name">@tkdkid1000</p>
 </div>
