--- a/data/copyright.html
+++ b/data/copyright.html
@@ -1,7 +1,9 @@
 <hr />
 <i class="fab fa-discord fa-lg" title="Copy my discord name" onclick="copytext(`imayhaveborkedit#0406`)"></i>
+<i class="fas fa-envelope fa-lg" title="Send me an email" onclick="openlink(`mailto:tkdkid999@gmail.com`)"></i>
 <i class="fab fa-github fa-lg" title="Open my github" onclick="openlink(`https://github.com/TKDKid1000`)"></i>
 <i class="fab fa-reddit fa-lg" title="Open my reddit" onclick="openlink(`https://reddit.com/u/TKDKid1000`)"></i>
 <i class="fab fa-stack-overflow fa-lg" title="Open my stackoverflow" onclick="openlink(`https://stackoverflow.com/users/15095035/tkdkid1000`)"></i>
+<i class="fab fa-codepen fa-lg" title="Open my codepen" onclick="openlink(`https://codepen.io/tkdkid1000`)"></i>
 <textarea style="display:none" id=text></textarea>
 <span style="color:#ff0000;">&copy; </span><span style="color:#f4000a;">C</span><span style="color:#e90015;">o</span><span style="color:#df001f;">p</span><span style="color:#d4002a;">y</span><span style="color:#c90034;">r</span><span style="color:#bf003f;">i</span><span style="color:#b40049;">g</span><span style="color:#aa0054;">h</span><span style="color:#9f005e;">t </span><span style="color:#940069;">2</span><span style="color:#8a0073;">0</span><span style="color:#7f007e;">2</span><span style="color:#740088;">1</span><span style="color:#6a0093;">, </span><span style="color:#5f009d;">T</span><span style="color:#5500a8;">K</span><span style="color:#4a00b2;">D</span><span style="color:#3f00bd;">K</span><span style="color:#3500c7;">i</span><span style="color:#2a00d2;">d</span><span style="color:#1f00dc;">1</span><span style="color:#1500e7;">0</span><span style="color:#0a00f1;">0</span><span style="color:#0000fc;">0</span>
