centered text inside socials

--- a/data/socials.html
+++ b/data/socials.html
@@ -1,24 +1,24 @@
-<div class="discord social" title="Copy my discord name" onclick="copytext(`imayhaveborkedit#0406`)">
-    <i class="fab fa-discord fa-2x"></i>
-    <p class="name">imayhaveborkedit#0406</p>
+<div class="discord social" title="Copy my discord name">
+    <i class="fab fa-discord fa-2x" onclick="copytext(`imayhaveborkedit#0406`)"></i>
+    <p class="name">&nbsp;imayhaveborkedit#0406</p>
 </div>
-<div class="email social" title="Send me an email" onclick="openlink(`mailto:tkdkid999@gmail.com`)">
-    <i class="fas fa-envelope fa-2x"></i>
-    <p class="name">tkdkid999@gmail.com</p>
+<div class="email social" title="Send me an email">
+    <i class="fas fa-envelope fa-2x" onclick="openlink(`mailto:tkdkid999@gmail.com`)"></i>
+    <p class="name">&nbsp;tkdkid999@gmail.com</p>
 </div>
-<div class="github social" title="Open my github" onclick="openlink(`https://github.com/TKDKid1000`)">
-    <i class="fab fa-github fa-2x"></i>
-    <p class="name">TKDKid1000</p>
+<div class="github social" title="Open my github">
+    <i class="fab fa-github fa-2x" onclick="openlink(`https://github.com/TKDKid1000`)"></i>
+    <p class="name">&nbsp;TKDKid1000</p>
 </div>
-<div class="reddit social" title="Open my reddit" onclick="openlink(`https://reddit.com/u/TKDKid1000`)">
-    <i class="fab fa-reddit fa-2x"></i>
-    <p class="name">U/TKDKid1000</p>
+<div class="reddit social" title="Open my reddit">
+    <i class="fab fa-reddit fa-2x" onclick="openlink(`https://reddit.com/u/TKDKid1000`)"></i>
+    <p class="name">&nbsp;U/TKDKid1000</p>
 </div>
-<div class="stackoverflow social" title="Open my stackoverflow" onclick="openlink(`https://stackoverflow.com/users/15095035/tkdkid1000`)">
-    <i class="fab fa-stack-overflow fa-2x"></i>
-    <p class="name">TKDKid1000</p>
+<div class="stackoverflow social" title="Open my stackoverflow">
+    <i class="fab fa-stack-overflow fa-2x" onclick="openlink(`https://stackoverflow.com/users/15095035/tkdkid1000`)"></i>
+    <p class="name">&nbsp;TKDKid1000</p>
 </div>
-<div class="codepen social" title="Open my codepen" onclick="openlink(`https://codepen.io/tkdkid1000`)">
-    <i class="fab fa-codepen fa-2x"></i>
-    <p class="name">@tkdkid1000</p>
+<div class="codepen social" title="Open my codepen">
+    <i class="fab fa-codepen fa-2x" onclick="openlink(`https://codepen.io/tkdkid1000`)"></i>
+    <p class="name">&nbsp;@tkdkid1000</p>
 </div>
