Changed discord name

--- a/data/socials.html
+++ b/data/socials.html
@@ -1,6 +1,6 @@
 <div class="discord social" title="Copy my discord name">
-    <i class="fab fa-discord fa-2x" onclick="copytext(`imayhaveborkedit#0406`)"></i>
-    <p class="name">&nbsp;imayhaveborkedit#0406</p>
+    <i class="fab fa-discord fa-2x" onclick="copytext(`TKDKid1000#0406`)"></i>
+    <p class="name">&nbsp;TKDKid1000#0406</p>
 </div>
 <div class="email social" title="Send me an email">
     <i class="fas fa-envelope fa-2x" onclick="openlink(`mailto:tkdkid999@gmail.com`)"></i>
