Changed discord name

--- a/data/copyright.html
+++ b/data/copyright.html
@@ -1,5 +1,5 @@
 <hr />
-<i class="fab fa-discord fa-lg" title="Copy my discord name" onclick="copytext(`imayhaveborkedit#0406`)"></i>
+<i class="fab fa-discord fa-lg" title="Copy my discord name" onclick="copytext(`TKDKid1000#0406`)"></i>
 <i class="fas fa-envelope fa-lg" title="Send me an email" onclick="openlink(`mailto:tkdkid999@gmail.com`)"></i>
 <i class="fab fa-github fa-lg" title="Open my github" onclick="openlink(`https://github.com/TKDKid1000`)"></i>
 <i class="fab fa-reddit fa-lg" title="Open my reddit" onclick="openlink(`https://reddit.com/u/TKDKid1000`)"></i>
