Change discord name

--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
         <div data-include="data/socials.html"></div>
 	<h1 style="text-align: center;">Contact</h1>
 	<i class="fab fa-discord fa-7x"></i>
-	<p style="text-align: left;">Message me on discord at imayhaveborkedit#0406</p>
+	<p style="text-align: left;">Message me on discord at TKDKid1000#0406</p>
 	<hr />
 	<i class="fas fa-server fa-7x"></i>
 	<p style="text-align: left;">Join my discord server <a href="https://discord.gg/eMHbUptg77"> https://discord.gg/eMHbUptg77</a></p>
